--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -10,9 +10,10 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  
+  <script type="text/javascript" src="../lib/helloworld.js"></script>
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="spec/HelloWorld.spec.js"></script>
   
 
   <script type="text/javascript">
